Adjusted vertical alignment and added correct filter type

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
@@ -191,6 +191,9 @@
   border-bottom: 1px solid #ddd;
   border-top: 1px solid #ddd;
 }
+.page-toolbar .btn-group {
+  vertical-align:top;
+}
 
 .toolbar {
   padding: 15px;
