--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/resourcesView.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/resourcesView.less
@@ -49,7 +49,8 @@
   color:white;
 }
 
-#connectorGrid .backgrid-table td {
+#connectorGrid .backgrid-table td,
+#managedGrid .backgrid-table td {
   padding-top:18px;
   padding-bottom:8px;
 }
@@ -73,7 +74,6 @@
       text-align:center;
       position: relative;
       top: 1px;
-      left: 1px;
     }
   }
 
